# CorexCompiler

./: CMakeLists.txt  CodeIDE.pro  LICENSE  README.md  codeeditor.cpp  codeeditor.h  compileride.cpp  compileride.h  main.cpp  syntaxhighlighter.cpp  syntaxhighlighter.h
